<resources>
    <string name="app_name">BeerRating</string>
    <string name="mainText">You are not logged in, so we cannot display your previously rated beers. Please login or register!</string>
    <string name="login">Login</string>
    <string name="registration">SignIn</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="e_mail">E-mail:</string>
    <string name="password_confirmation">Password confirmation:</string>
    <string name="dob">Date of birth:</string>
    <string name="forename">Forename:</string>
    <string name="surename">Surename:</string>
    <string name="sex">Sex:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="rating">Rating:</string>
    <string name="alc">ALC/VOL</string>
    <string name="regdate">Registered:</string>
    <string name="updateProfile">Update Profile</string>
    <string name="profileText">If you want to change your password or update your profile, press the UPDATE PROFILE button or the CHANGE PASSWORD button. If you want to log out, press LOG OUT</string>
    <string name="lougout">Logout</string>
    <string name="changepass">Change password</string>
    <string name="oldPass">Old password:</string>
    <string name="newpassword">New password:</string>
    <string name="newPassCon">New password confirmation:</string>
    <string name="save">Save</string>
    <string name="beerbrewery">Brewery:</string>
    <string name="beercategory">Category:</string>
    <string name="beername">Beer name:</string>
    <string name="LastReviewDate">Last review date:</string>
    <string name="beerDetails">Details:</string>
    <string name="opinion">Opinion:</string>
    <string name="breweryname">Brewery name:</string>
    <string name="brewerycountry">Brewery country:</string>
    <string name="brewerypostcode">Brewery postcode:</string>
    <string name="breweryaddress">Brewery address:</string>
    <string name="loginfailed">Login failed! Username or password not correct!</string>
    <string name="newpassincor">The new password does not match the password confirmation!</string>
    <string name="oldpassincor">Old password incorrect!</string>
    <string name="passsaved">New password saved!</string>
    <string name="reviewupdate">Review updated!</string>
    <string name="reviewdeleted">Review deleted!</string>
    <string name="newreview">New review saved!</string>
    <string name="newbeer">New beer saved!</string>
    <string name="newcategory">New category saved!</string>
    <string name="brewerycity">Brewery city:</string>
    <string name="newbrewery">New brewery saved!</string>
    <string name="globalrating">Global rating:</string>
    <string name="updateprofile">Profile updated!</string>
    <string name="alreadyexist">Username or e-mail already taken!</string>
    <string name="regsuccess">Registration successful!</string>
    <string name="beerrating">BeerRating</string>
    <string name="select_beer">Select beer</string>
    <string name="select_category">Select category</string>
    <string name="select_brewery">Select brewery</string>
    <string name="selectbeerError">Select a beer please!</string>
    <string name="newbeerError">Select beer and category please!</string>
    <string name="select">Select from the list</string>
    <string name="logging_in">Logging In...</string>
    <string name="emptyData">Please complete all fields!</string>
    <string name="categoryName">Category name:</string>
    <string name="emptyBrewName">Please complete Brewery name fields!</string>
    <string name="categoryExists">This category already exists!</string>
    <string name="breweryExists">This brewery already exists!</string>
    <string name="beerExists">This beer already exists!</string>
</resources>