<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/profil" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="e-mail"
                    android:textSize="15sp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forename"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvForeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="forename"
                    android:textSize="15sp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surename"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvSureName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="surename"
                    android:textSize="15sp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvDOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="YYYY.mm.DD."
                    android:textSize="15sp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sex"
                    android:textSize="15sp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileText"
        android:textSize="10sp" />
    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateProfile"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changepass"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lougout"
        android:layout_gravity="center_horizontal" />

</LinearLayout>