<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beername"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etbeername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beercategory"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spbeercategory"
                android:layout_width="334dp"
                android:layout_height="36dp" />

            <ImageButton
                android:id="@+id/ibaddNewCat"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_add_white_36dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alc"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etalc"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beerbrewery"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spBeerBrewery"
                android:layout_width="334dp"
                android:layout_height="36dp" />

            <ImageButton
                android:id="@+id/ibaddNewBrew"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_add_white_36dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beerDetails"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etBeerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSave_nb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/save"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</ScrollView>