<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/picture_not_found" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beername"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvBeerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Név"
                    android:textSize="15sp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beercategory"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvForeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="category"
                    android:textSize="15sp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alc"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvSureName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="XY%"
                    android:textSize="15sp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beerbrewery"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvDOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Név"
                    android:textSize="15sp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/rating" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    tools:text="Rating" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LastReviewDate"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvLastReviewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="LastReviewDate" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beerDetails"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Leírás" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opinion"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvOpinion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="vélemény" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/ibModify"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/ic_pencil_grey600_48dp" />

        <ImageButton
            android:id="@+id/ibRemove"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/ic_delete_grey600_48dp" />
    </LinearLayout>

</LinearLayout>